tests/baselines/reference/parserConstructorAmbiguity3.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity3.ts(1,10): error TS2304: Cannot find name 'A'.
tests/cases/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity3.ts(1,10): error TS2558: Expected 0 type arguments, but got 1.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity3.ts (2 errors) ====
    new Date<A>
             ~
!!! error TS2304: Cannot find name 'A'.
             ~
!!! error TS2558: Expected 0 type arguments, but got 1.